Fix letter-spacing utility bug

--- a/src/utility-generators/_letter-spacing.scss
+++ b/src/utility-generators/_letter-spacing.scss
@@ -3,7 +3,7 @@
 @use 'sass:map';
 
 @mixin letter-spacing($screen: null) {
-  $args: config.$tracking, map.get(config.$variants, 'tracking'), $screen;
+  $args: config.$tracking, map.get(config.$variants, 'letter-spacing'), $screen;
 
   @include generate-variants.configurable($args...) using ($prefix, $modifier, $state, $value) {
     .#{$prefix}tracking#{$modifier}#{$state} { letter-spacing: $value; }
